<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navMain"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.pureblacksoft.gradinfo.fragment.HomeFragment"
        android:label="@string/Home_Title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.pureblacksoft.gradinfo.fragment.SearchFragment"
        android:label="@string/Search_Title"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/userFragment"
        android:name="com.pureblacksoft.gradinfo.fragment.UserFragment"
        android:label="@string/User_Title"
        tools:layout="@layout/fragment_user" />

</navigation>