<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PureRoot.Relative"
    tools:context=".activity.PrefActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarPA"
        style="@style/PureBar.Toolbar">

        <RelativeLayout style="@style/PureBar.Relative">

            <ImageView
                android:id="@+id/imgToolbarBackPA"
                style="@style/PureBar.Relative.Image"
                android:layout_marginHorizontal="@dimen/App_Margin_M"
                android:contentDescription="@string/Description_Icon"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/txtToolbarTitlePA"
                style="@style/PureBar.Relative.Text"
                android:layout_toEndOf="@+id/imgToolbarBackPA"
                android:text="@string/Pref_Title" />

        </RelativeLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        style="@style/PureBox.Linear"
        android:layout_centerVertical="true">

        <TextView
            style="@style/PureButton.Text.Title"
            android:layout_marginBottom="@dimen/App_Margin_M"
            android:text="@string/Pref_Theme" />

        <RelativeLayout
            android:id="@+id/rltDefaultThemePA"
            style="@style/PureButton.Relative"
            android:layout_marginBottom="@dimen/App_Margin_M">

            <ImageView
                android:id="@+id/imgDefaultThemePA"
                style="@style/PureButton.Relative.Image"
                android:layout_marginHorizontal="@dimen/App_Margin_M"
                android:contentDescription="@string/Description_Icon"
                android:src="@drawable/ic_check" />

            <TextView
                style="@style/PureButton.Relative.Text"
                android:layout_toEndOf="@+id/imgDefaultThemePA"
                android:text="@string/Pref_Theme_Default" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rltLightThemePA"
            style="@style/PureButton.Relative"
            android:layout_marginBottom="@dimen/App_Margin_M">

            <ImageView
                android:id="@+id/imgLightThemePA"
                style="@style/PureButton.Relative.Image"
                android:layout_marginHorizontal="@dimen/App_Margin_M"
                android:contentDescription="@string/Description_Icon"
                android:src="@drawable/ic_check" />

            <TextView
                style="@style/PureButton.Relative.Text"
                android:layout_toEndOf="@+id/imgLightThemePA"
                android:text="@string/Pref_Theme_Light" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rltDarkThemePA"
            style="@style/PureButton.Relative">

            <ImageView
                android:id="@+id/imgDarkThemePA"
                style="@style/PureButton.Relative.Image"
                android:layout_marginHorizontal="@dimen/App_Margin_M"
                android:contentDescription="@string/Description_Icon"
                android:src="@drawable/ic_check" />

            <TextView
                style="@style/PureButton.Relative.Text"
                android:layout_toEndOf="@+id/imgDarkThemePA"
                android:text="@string/Pref_Theme_Dark" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>